--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,6 +1,6 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4" (ngSubmit)="login()">
+<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
   <div class="form-group">
     <input
       class="form-control"
@@ -8,7 +8,13 @@
       [(ngModel)]="usuario"
       type="text"
       name="usuario"
+      #campoUsuario="ngModel"
+      required
     />
+    <app-mensagem
+      *ngIf="campoUsuario.invalid && campoUsuario.touched"
+      mensagem="Usuário obrigatório"
+    ></app-mensagem>
   </div>
 
   <div class="form-group">
@@ -18,8 +24,14 @@
       [(ngModel)]="senha"
       type="password"
       name="senha"
+      #campoSenha="ngModel"
+      required
     />
+    <app-mensagem
+      *ngIf="campoSenha.invalid && campoSenha.touched"
+      mensagem="Senha obrigatória"
+    ></app-mensagem>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block">Login</button>
+  <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
