--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -35,3 +35,5 @@
 
   <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
+
+<p>Não é um usuário? <a [routerLink]="['novo']">Se cadastre!</a></p>
