--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -1,17 +1,17 @@
 <h4 class="text-center">Registre-se e mostre seu pet ao mundo!</h4>
 
-<form class="form mt-4">
+<form class="form mt-4" [formGroup]="novoUsuarioForm" (submit)="cadastrar()">
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="e-mail">
+        <input type="text" class="form-control" formControlName="email" placeholder="e-mail">
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="Nome Completo">
+        <input type="text" class="form-control" formControlName="fullName" placeholder="Nome Completo">
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="Usuário">
+        <input type="text" class="form-control" formControlName="userName" placeholder="Usuário">
     </div>
     <div class="form-group">
-        <input type="password" class="form-control" placeholder="Senha">
+        <input type="password" class="form-control" formControlName="password" placeholder="Senha">
     </div>
     <button class="btn btn-primary btn-block">Cadastro</button>
 </form>
