--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -3,9 +3,15 @@
 <form class="form mt-4" [formGroup]="novoUsuarioForm" (submit)="cadastrar()">
     <div class="form-group">
         <input type="text" class="form-control" formControlName="email" placeholder="e-mail">
+        <app-mensagem *ngIf="novoUsuarioForm.get('email')?.errors?.required && 
+        novoUsuarioForm.get('email')?.touched" mensagem="E-mail obrigatório"></app-mensagem>
+        <app-mensagem *ngIf="novoUsuarioForm.get('email')?.errors?.email && 
+        novoUsuarioForm.get('email')?.touched" mensagem="E-mail no formato incorreto"></app-mensagem>
     </div>
     <div class="form-group">
         <input type="text" class="form-control" formControlName="fullName" placeholder="Nome Completo">
+        <app-mensagem *ngIf="novoUsuarioForm.get('fullName')?.errors && 
+        novoUsuarioForm.get('fullName')?.touched" mensagem="Nome incorreto"></app-mensagem>
     </div>
     <div class="form-group">
         <input type="text" class="form-control" formControlName="userName" placeholder="Usuário">
