--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -18,6 +18,9 @@
         <app-mensagem  *ngIf="novoUsuarioForm.get('userName')?.errors?.minusculo &&
         novoUsuarioForm.get('userName')?.touched"
         mensagem="Usuário deve ser em letra minúscula"></app-mensagem>
+        <app-mensagem *ngIf="novoUsuarioForm.get('userName')?.errors?.usuarioExistente" 
+            mensagem="Usuário já existe">
+        </app-mensagem>
     </div>
     <div class="form-group">
         <input type="password" class="form-control" formControlName="password" placeholder="Senha">
